--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.7.0",
@@ -21,6 +22,7 @@
     "moment": "^2.27.0",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-cache": "^2.0.0-rc.5",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-progress": "^4.1.2",
