--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,4 +24,10 @@
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
+    <application>
+      <meta-data
+        android:name="com.amap.api.v2.apikey"
+        android:value="2b70c12d2fc3b69ccbddefe84a05e5fc" />
+    </application>
+
 </manifest>
