--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.6.2",
+    "@reduxjs/toolkit": "^1.4.0",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.19.2",
     "moment": "^2.27.0",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-amap3d": "^2.0.1",
     "react-native-cache": "^2.0.0-rc.5",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -30,7 +32,8 @@
     "react-native-safe-area-context": "^3.1.1",
     "react-native-safe-module": "^1.2.0",
     "react-native-screens": "^2.9.0",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-redux": "^7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
