--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "react-native-cache": "^2.0.0-rc.5",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-safe-module": "^1.2.0",
     "react-native-screens": "^2.9.0",
+    "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-svg": "^12.1.0",
     "react-redux": "^7.2.0"
   },
