--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.19.2",
     "moment": "^2.27.0",
+    "popup-ui": "^1.2.2",
     "react": "16.13.1",
     "react-native": "0.63.0",
     "react-native-amap3d": "^2.0.1",
@@ -30,6 +31,7 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.6.1",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
