search optimized & graph almost complete

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -28,3 +28,5 @@ android.enableJetifier=true
 FLIPPER_VERSION=0.37.0
 
 org.gradle.caching=true
+
+org.gradle.jvmargs=-Xmx4536m -DsocksProxyHost\=127.0.0.1 -DsocksProxyPort\=10808
