--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.6.1",
+    "react-native-navbar-color": "^1.0.3",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-safe-module": "^1.2.0",
     "react-native-screens": "^2.9.0",
     "react-native-skeleton-placeholder": "^2.0.7",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-redux": "^7.2.0"
   },
