--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,9 @@
 rootProject.name = 'earthquakeMonitor'
+
+// navbar color
+include ':react-native-navigation-bar-color'
+project(':react-native-navigation-bar-color').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-navigation-bar-color/android')
+
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 include ':react-native-splash-screen'
