--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            storeFile file('my-upload-key.keystore')
+            storePassword 'mdk20010220'
+            keyAlias 'my-key-alias'
+            keyPassword 'mdk20010220'
+        }
     }
     buildTypes {
         debug {
@@ -159,7 +166,8 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -208,7 +216,9 @@ dependencies {
         implementation jscFlavor
     }
 
+    // custom dependency
     implementation project(':react-native-splash-screen')
+    implementation project(':react-native-navigation-bar-color')
 }
 
 // Run this once to be able to run the application with BUCK
