--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,10 +153,12 @@ android {
         }
 
         release {
-            storeFile file('my-upload-key.keystore')
-            storePassword 'mdk20010220'
-            keyAlias 'my-key-alias'
-            keyPassword 'mdk20010220'
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
         }
     }
     buildTypes {
