--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -30,3 +30,8 @@ FLIPPER_VERSION=0.37.0
 org.gradle.caching=true
 
 org.gradle.jvmargs=-Xmx4536m -DsocksProxyHost\=127.0.0.1 -DsocksProxyPort\=10808
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=mdk20010220
+MYAPP_UPLOAD_KEY_PASSWORD=mdk20010220
