--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "earthquakeMonitor",
-  "displayName": "earthquakeMonitor"
+  "name": "Earthquake Monitor",
+  "displayName": "Earthquake Monitor",
 }
