--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,10 +1,10 @@
-rootProject.name = 'earthquakeMonitor'
+rootProject.name = 'Earthquake Monitor'
+include ':app'
 
 // navbar color
 include ':react-native-navigation-bar-color'
 project(':react-native-navigation-bar-color').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-navigation-bar-color/android')
 
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
-include ':app'
 include ':react-native-splash-screen'
 project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
